reworked some files structure and added breadcrumbs

--- a/app/assets/stylesheets/core/_main.scss
+++ b/app/assets/stylesheets/core/_main.scss
@@ -18,7 +18,7 @@
 		position: relative;
 
 		.container-header, .container-body {
-			padding: 15px 0;
+			// padding: 15px 0;
 		}
 
 		.container-header {
