--- a/app/assets/stylesheets/core/_spinner.scss
+++ b/app/assets/stylesheets/core/_spinner.scss
@@ -1,8 +1,8 @@
 .spinner {
   display: none;
-  position: absolute;
-  left: 0%;
-  top: 0%;
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(237, 240, 240, .95);
