fixed problem with pagination css

--- a/app/assets/stylesheets/core/_pagination.scss
+++ b/app/assets/stylesheets/core/_pagination.scss
@@ -60,11 +60,11 @@
     content: "\203A";
   }
 
-  .next:before {
+  .first:before {
     content: "\00AB";
   }
 
-  .next:before {
+  .last:before {
     content: "\00BB";
   }
 }
