--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -230,6 +230,10 @@
       .first, .prev, .next, .last {
         text-indent: -9999px;
         position: relative;
+
+        &:before {
+          text-indent: initial;
+        }
       }
     }
 
