fixed css for buttons with icon

--- a/app/assets/stylesheets/core/_table.scss
+++ b/app/assets/stylesheets/core/_table.scss
@@ -107,6 +107,10 @@
       height: auto;
       background-color: transparent;
       @include prefix(box-shadow, none);
+
+      &:hover span {
+        color: $dark-blue;
+      }
     }
   }
   
