reworked some functions

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -349,6 +349,7 @@
 				margin-bottom: 10px;
 				font-size: 1em;
 				font-weight: 600;
+				text-transform: lowercase;
 
 				span {
 					font-weight: 600;
