--- a/app/views/schools/index.js.erb
+++ b/app/views/schools/index.js.erb
@@ -1,2 +1,3 @@
 $('#schools-data').empty();
 $('#schools-data').html('<%= escape_javascript(render 'schools') %>');
+$('#registered-data').html('<%= escape_javascript(render 'registered_data') %>');
