--- a/app/views/stuffs/index.js.erb
+++ b/app/views/stuffs/index.js.erb
@@ -1,2 +1,3 @@
 $('#stuffs-data').empty();
 $('#stuffs-data').html('<%= escape_javascript(render 'stuffs') %>');
+$('#registered-data').html('<%= escape_javascript(render 'registered_data') %>');
