--- a/app/views/users/index.js.erb
+++ b/app/views/users/index.js.erb
@@ -1,2 +1,3 @@
 $('#users-data').empty();
 $('#users-data').html('<%= escape_javascript(render 'users') %>');
+$('#registered-data').html('<%= escape_javascript(render 'registered_data') %>');
