--- a/app/views/schools/index.js.erb
+++ b/app/views/schools/index.js.erb
@@ -1,3 +1,3 @@
 $('#schools-data').empty();
 $('#schools-data').html('<%= escape_javascript(render 'schools') %>');
-$('#registered-data').html('<%= escape_javascript(render 'registered_data') %>');
+$('#registered-data').html('<%= escape_javascript(render "shared/registered_data", paginate: @schools_paginate) %>');
