refactored js tree files and order view type working with ajax

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -37,6 +37,10 @@
     	&.list {
     		overflow: initial;
     		height: auto;
+
+    		.prev-btn, .next-btn {
+    			display: none !important;
+    		}
     	}
 
     	.prev-btn, .next-btn {
