--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
   <body <%= body_info %>>
     <%= render 'shared/loading' %>
 
+    <%= render 'modals/no_vehicle' %>
+
     <div class="main">
       <span class="menu-icon material-symbols-outlined md-20">menu</span>
 
