username exhibition for modal

--- a/app/views/modals/_no_vehicle.html.erb
+++ b/app/views/modals/_no_vehicle.html.erb
@@ -2,7 +2,7 @@
   <div class="modal">
 
     <div class="modal__details">
-      <h1 class="modal__title">Olá, <%= current_user.name %>!</h1>
+      <h1 class="modal__title">Olá, <%= username %>!</h1>
     </div>
 
     <p class="modal__text">Estamos sem veículo para atendimentos externos no momento, portanto os chamados podem demorar um pouco mais do que o normal para serem atendidos. Agradecemos a compreensão!</p>
