--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -425,3 +425,13 @@ div[data-status="descarte"] {
 div[data-status="cancelado"] {
   color: #aaa !important;
 }
+
+.sticky {
+  position: fixed;
+  top: 0;
+  padding: 15px 30px;
+  margin-left: -30px;
+	background-color: $alt-color;
+	z-index: 998;
+	box-shadow: rgba(0, 0, 0, 0.45) 0px 5px 20px -20px;
+}
