--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,19 +31,19 @@
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search">
-				<%= search_field_tag :id, params[:id], placeholder: "Número da OS" %>
+				<%= search_field_tag :id, params[:id], placeholder: "Número da OS", title: "Número da OS" %>
 			</div>
 		</div>
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search" id="autocomplete-patrimony">
-				<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio/Nº série", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, type: "search", title: "Digite S/P para pesquisar OS sem patrimônio" %>
+				<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio/Nº série", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, type: "search", title: "Digite S/P para pesquisar OS sem patrimônio", title: "Patrimônio/Nº série" %>
 			</div>
 		</div>
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search" id="autocomplete-name">
-				<%= autocomplete_field_tag :name, params[:name], autocomplete_school_name_schools_path, placeholder: "Nome da unidade", append_to: "#autocomplete-name",'data-showNoMatches' => false %>
+				<%= autocomplete_field_tag :name, params[:name], autocomplete_school_name_schools_path, placeholder: "Nome da unidade", append_to: "#autocomplete-name",'data-showNoMatches' => false, title: "Nome da unidade" %>
 			</div>
 		</div>
 
@@ -67,7 +67,7 @@
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search" id="autocomplete-category">
-				<%= search_field_tag :category, params[:category], placeholder: "Categoria. Ex.: PC, impressora, monitor.." %>
+				<%= search_field_tag :category, params[:category], placeholder: "Categoria. Ex.: PC, impressora, monitor..", title: "Categoria. Ex.: PC, impressora, monitor.." %>
 				<% list_categories.each do |category| %>
 			    <%= content_tag :div, category, class: "search_list list_categories" %>
 				<% end %>
@@ -76,7 +76,7 @@
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search" id="autocomplete-brand">
-				<%= search_field_tag :brand, params[:brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
+				<%= search_field_tag :brand, params[:brand], placeholder: "Marca/modelo. Ex.: Acer, Dell, Positivo..", title: "Marca/modelo. Ex.: Acer, Dell, Positivo.." %>
 				<% list_brands.each do |brand| %>
 			    <%= content_tag :div, brand, class: "search_list list_brands" %>
 				<% end %>
@@ -85,7 +85,7 @@
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search" id="autocomplete-spot">
-				<%= search_field_tag :spot, params[:spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab..." %>
+				<%= search_field_tag :spot, params[:spot], list_spots: list_spots, placeholder: "Local de instalação. Ex.: secretaria, direção, lab...", title: "Local de instalação. Ex.: secretaria, direção, lab..." %>
 				<% list_spots.each do |spot| %>
 			    <%= content_tag :div, spot, class: "search_list list_spots" %>
 				<% end %>
@@ -94,13 +94,13 @@
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search date" id="start-date">
-				<%= text_field_tag :start_date, params[:start_date], placeholder: "Data inicial", autocomplete: "off", "data-date-format": "dd/mm/yyyy" %>
+				<%= text_field_tag :start_date, params[:start_date], placeholder: "Data de abertura", autocomplete: "off", "data-date-format": "dd/mm/yyyy", title: "Data de abertura" %>
 			</div>
 		</div>
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search date" id="end-date">
-				<%= text_field_tag :end_date, params[:end_date], placeholder: "Data final", autocomplete: "off", "data-date-format": "dd/mm/yyyy" %>
+				<%= text_field_tag :end_date, params[:end_date], placeholder: "Data da manutenção", autocomplete: "off", "data-date-format": "dd/mm/yyyy", title: "Data da manutenção" %>
 			</div>
 		</div>
 	</div>
