--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,35 @@
 <section class="container-body">
 	<div class="row">
+		<div class="col-3">
+			<div class="feature-card last-month">
+				<h1><%= @orders_last_month %></h1>
+				<p><%= l(Time.now - 1.month, format: '%B') %></p>
+			</div>
+		</div>
+
+		<div class="col-3">
+			<div class="feature-card last-2-months">
+				<h1><%= @orders_last_2_months %></h1>
+				<p><%= l(Time.now - 2.month, format: '%B') %></p>
+			</div>
+		</div>
+
+		<div class="col-3">
+			<div class="feature-card last-3-months">
+				<h1><%= @orders_last_3_months %></h1>
+				<p><%= l(Time.now - 3.month, format: '%B') %></p>
+			</div>
+		</div>
+
+		<div class="col-3">
+			<div class="feature-card last-4-months">
+				<h1><%= @orders_last_4_months %></h1>
+				<p><%= l(Time.now - 4.month, format: '%B') %></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="row m-t-25">
 		<div class="col-12">
 			<div class="card">
 				<header class="card-header">
