--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -21,7 +21,7 @@
 
     		<%= content_tag :div, "", class: "row" do %>
     			<div class="col-12 col-lg-4 col-md-5 col-sm-6">
-  					<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, input_html: { class: "chosen-select" } %>
+  					<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, input_html: { class: "select2-dropdown" } %>
     			</div>
 				<% end if is_admin?(current_user) %>
 
