--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
 		<h1 class="schools-orders-cards-title">Atendimentos por unidade nos últimos <span>3 meses</span></h1>
 
 		<% @schools.each do |s| %>
-			<div orders-count=<%= s.orders.count %> class="school-order-card col-12 col-md-6">
+			<div orders-count=<%= orders_per_school(s) %> class="school-order-card col-12 col-md-6">
 				<div class="content">
 					<div class="title"><%= s.usual_name %></div>
 					<div class="text"><%= s.full_name %></div>
