fixed report layout

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -970,7 +970,7 @@
 			    border-radius: 5px;
 
 					.count {
-						width: 20px;
+						width: 30%;
 						color: $dark-blue;
 						font-weight: 600;
 						font-size: 2em;
