fixed mispell in orders report

--- a/app/views/orders/print_orders_report.html.erb
+++ b/app/views/orders/print_orders_report.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <header>
       <h1>Relatório de atendimentos</h1>
-      <p>Total de ordens de serviços atendidas nos últimos meses</p>
+      <p>Total de ordens de serviço atendidas nos últimos meses</p>
     </header>
 
     <div class="container">
