--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -41,7 +41,7 @@
 
 		<div class="col-lg-3 col-md-6 col-sm-12">
 			<div class="search" id="autocomplete-patrimony">
-				<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio/Nº série", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, type: "search", title: "Digite S/P para pesquisar OS sem patrimônio", title: "Patrimônio/Nº série" %>
+				<%= autocomplete_field_tag :patrimony, params[:patrimony], autocomplete_stuff_patrimony_orders_path, placeholder: "Patrimônio/Nº série", append_to: "#autocomplete-patrimony",'data-showNoMatches' => false, type: "search", title: "Patrimônio/Nº série" %>
 			</div>
 		</div>
 
